# Cango.GalaxySDK

./: CMakeLists.txt  README.md
Cameras/: KE0200060395.ini
Headers/: GalaxySDK.hpp
Headers/Cango/: GalaxySDK.hpp
Headers/Cango/GalaxySDK/: DeviceControls.hpp  DeviceIdentifier.hpp  DeviceParameter.hpp  GxCamera.hpp  LibraryLifeTime.hpp  QueryDevices.hpp  Utils.hpp
Modules/Linux_x64/: version.txt
Modules/Linux_x64/inc/: DxImageProc.h  GxIAPI.h
Modules/Linux_x64/lib/: GxGVTL.cti
Modules/Windows_x64/: version.txt
Modules/Windows_x64/inc/: DxImageProc.h  GXDef.h  GXErrorList.h  GxIAPI.h  GxPixelFormat.h
Modules/Windows_x64/lib/: DxImageProc.lib  GxIAPI.lib
Sources/: GalaxySDK.cpp
Testers/: CameraTester.cpp
